Fiz uma mudança para explicar o comando para justificar o texto, mas estou testando se o Push dará certo.

--- a/apresentacao_CAP-03_acao-de-Deus.tex
+++ b/apresentacao_CAP-03_acao-de-Deus.tex
@@ -1,5 +1,6 @@
 \documentclass[aspectratio=169,compress]{beamer}
-% \justifying
+%---------------------------------------------> Comando para deixar justificado 
+%                                               o texto nos blocos: \justifying
 %
 \input{tex/pre/preambulo} %------> Preâmbulo tex
 
