Mudei uma letra do nome de H. Allen Orr, pela contribuição de Lucas.

--- a/tex/sections/02_sec_problema.tex
+++ b/tex/sections/02_sec_problema.tex
@@ -79,7 +79,7 @@
 			 \item<3-> Cientitas com Clayton: 
 				 \begin{itemize}
 					 \item<4-> \onslide<4->{Richard Dawkins}\onslide<5->{, Peter Atkins} \onslide<6->{(loucos?)}
-					 \item<7-> H. Alln Orr (sensato)
+					 \item<7-> H. Allen Orr (sensato)
 					\end{itemize}
 				\item<8-|alert@8> Ciência $\Longleftrightarrow$ \textcolor{NordYellow}{Determinismo}
 					\begin{itemize}
