Fiz a mudança que o Lucas indicou

--- a/tex/sections/02_sec_problema.tex
+++ b/tex/sections/02_sec_problema.tex
@@ -126,7 +126,7 @@
 			\begin{exampleblock}{\textbf{Resumo do ``Problema''}}
 			 \begin{enumerate}[(1)]
 					\item<2-> A Ciência descobre e endossa Leis Naturais;
-					\item<3-> As ações particulares de Deus violaria as Leis Naturais;
+					\item<3-> As ações particulares de Deus violariam as Leis Naturais;
 					\item<4-> Isso é incompatível com a Ciência.
 				\end{enumerate}
 			\end{exampleblock}
