- Mudança para correção no GitHub.

--- a/apresentacao_CAP-03_acao-de-Deus.tex
+++ b/apresentacao_CAP-03_acao-de-Deus.tex
@@ -15,6 +15,7 @@
 \input{tex/sections/01_sec_intro}
 \input{tex/sections/02_sec_problema}
 \input{tex/sections/03_sec_perspectivas-antigas}
+\input{tex/sections/04_referencias}
 %------------------------------------------------
 \end{document}
 %================================================
