--- a/tex/pre/preambulo.tex
+++ b/tex/pre/preambulo.tex
@@ -19,6 +19,7 @@
 \usepackage{booktabs}
 \usepackage{listings}
 \usepackage{tikz}
+\usepackage[alf]{abntex2cite}
 %==============================================================================
 
 %==============================================================================
