- Acrescentado ambiente para Referências

--- a/apresentacao_CAP-03_acao-de-Deus.tex
+++ b/apresentacao_CAP-03_acao-de-Deus.tex
@@ -1,6 +1,6 @@
 \documentclass[aspectratio=169,compress]{beamer}
-%---------------------------------------------> Comando para deixar justificado 
-%                                               o texto nos blocos: \justifying
+%-----------------------------------------------> `\justifying` deixa o texto, 
+%                                                 nos blocos, justificado. 
 %
 \input{tex/pre/preambulo} %------> Preâmbulo tex
 
