--- a/tex/sections/04_referencias.tex
+++ b/tex/sections/04_referencias.tex
@@ -1,5 +1,20 @@
 \section{Referências}
 
-\begin{frame}[allowframebreaks]{Referências}
- \bibliography{tex/sections/bib/referencias}
+\begin{frame}{Referências}
+ \begin{thebibliography}{3}
+	 \bibitem{norman}
+		 Geisler, Norman L.; Feinberg, Paul D..
+			\textcolor{NordGreen}{Introdução à Filosofia (uma perspectiva cristã)}.
+			São Paulo: Vida Nova, 2009.
+			
+		\bibitem{plantinga}
+		Plantinga, Alvin.
+		\textcolor{NordGreen}{Ciência, Religião e Naturalismo: onde está o conflito?}.
+		São Paulo: Vida Nova, 2018.
+		
+	 \bibitem{sproul}
+		Sproul, R. C. 
+		\textcolor{NordGreen}{Filosofia para Iniciantes}.
+		São Paulo: Vida Nova, 2002.
+	\end{thebibliography}
 \end{frame}
