- Melhorando o espaçamento/tabulação do código

--- a/tex/pre/preambulo.tex
+++ b/tex/pre/preambulo.tex
@@ -50,6 +50,8 @@
 %------------------------------------------------------------------------------
 % Comandos --------------------------------------------------------------------
 \newcommand{\cqd}{\hfill $\blacksquare$}
+\newcommand{\V}{\textbf{V}}
+\newcommand{\F}{\textbf{F}}
 %------------------------------------------------------------------------------
 %==============================================================================
 
