--- a/tex/sections/03_sec_perspectivas-antigas.tex
+++ b/tex/sections/03_sec_perspectivas-antigas.tex
@@ -90,7 +90,7 @@
        $p$ & $q$ & $p \wedge q$ & $p \vee q$ & \only<3->{\textcolor{NordYellow}{$p \rightarrow q$}}\\
        \midrule
        \V  & \V  & \V           & \V         & \only<5->{\textcolor{NordYellow}{\V}}\\
-       \V  & \F  & \V           & \V         & \only<4->{\textcolor{NordOrange}{\F}}\\
+       \V  & \F  & \F           & \V         & \only<4->{\textcolor{NordOrange}{\F}}\\
        \F  & \V  & \F           & \V         & \only<5->{\textcolor{NordYellow}{\V}}\\
        \F  & \F  & \F           & \F         & \only<5->{\textcolor{NordYellow}{\V}}\\
        \bottomrule
@@ -102,7 +102,7 @@
       $p$ & $q$ & $p \wedge q$ & $p \vee q$ & \textcolor{NordYellow}{$p \rightarrow q$} & \only<12->{$\sim\! p$ & \only<14->{\textcolor{NordYellow}{$\sim\! p \vee q$}}} \\
       \midrule
       \V  & \V  & \V           & \V         & \textcolor{NordYellow}{\V} & \only<13->{\F} &\only<16->{\textcolor{NordYellow}{\V}}\\
-      \V  & \F  & \V           & \V         & \textcolor{NordOrange}{\F} & \only<13->{\F} &\only<15->{\textcolor{NordOrange}{\F}}\\
+      \V  & \F  & \F           & \V         & \textcolor{NordOrange}{\F} & \only<13->{\F} &\only<15->{\textcolor{NordOrange}{\F}}\\
       \F  & \V  & \F           & \V         & \textcolor{NordYellow}{\V} & \only<13->{\V} &\only<16->{\textcolor{NordYellow}{\V}}\\
       \F  & \F  & \F           & \F         & \textcolor{NordYellow}{\V} & \only<13->{\V} &\only<16->{\textcolor{NordYellow}{\V}}\\
       \bottomrule
@@ -182,9 +182,9 @@
     \item Não cabe a ciência clássica afirmar que as leis não podem ser violadas;
     \item Portanto,
      \begin{align*}
-      \only<4->{\text{Ciência Clássica } &\not\Rightarrow \textcolor{NordYellow}{ Determinismo}}\\
+      \only<4->{\text{Ciência Clássica } &\not\Rightarrow \text{\textcolor{NordYellow}{ Determinismo}}}\\
       \only<5->{&\text{ ou}}\\
-      \only<6->{\text{Ciência Clássica } &\not\Rightarrow \textcolor{NordYellow}{ Universo casualmente fechado}}
+      \only<6->{\text{Ciência Clássica } &\not\Rightarrow \text{\textcolor{NordYellow}{ Universo casualmente fechado}}}
      \end{align*}
    \end{itemize}
   \end{exampleblock}
