--- a/tex/sections/04_referencias.tex
+++ b/tex/sections/04_referencias.tex
@@ -6,7 +6,12 @@
    Geisler, Norman L.; Feinberg, Paul D..
    \textcolor{NordGreen}{Introdução à Filosofia (uma perspectiva cristã)}.
    São Paulo: Vida Nova, 2009.
-			
+		
+  %\bibitem{moyses}
+  % Nussenzveig, Herch Moysés.
+  % \textcolor{NordGreen}{Curso de física básica: Mecânica (vol.1)}.
+  % ISBN = 9788521207467. Editora Blucher, 2013.
+  
   \bibitem{plantinga}
    Plantinga, Alvin.
    \textcolor{NordGreen}{Ciência, Religião e Naturalismo: onde está o conflito?}.
